Fix contrast issue for Sonar

--- a/src/App.css
+++ b/src/App.css
@@ -124,5 +124,5 @@ h1 {
 
 .empty {
   text-align: center;
-  color: #fff;
+  color: #222;
 }
